# deflate-rs

./: .gitattributes  .gitignore  .travis.yml  Cargo.toml  README.md  changelog.md
benches/: bench.rs
deflate-fuzz-target/: Cargo.toml
deflate-fuzz-target/src/: main.rs
src/: bit_reverse.rs  bit_writer.rs  bitstream.rs  chained_hash_table.rs  checksum.rs  compress.rs  compression_options.rs  deflate_state.rs  encoder_state.rs  huffman_lengths.rs  huffman_table.rs  input_buffer.rs  length_encode.rs  lib.rs  lz77.rs  lzvalue.rs  matching.rs  output_writer.rs  rle.rs  stored_block.rs  test_utils.rs  writer.rs  zlib.rs
tests/: issue_44.zlib  test.rs
tests/afl/default/: id_000000,sig_06,src_000831,op_havoc,rep_64  id_000001,sig_06,src_000891,op_havoc,rep_8  id_000002,sig_06,src_000891,op_havoc,rep_8  id_000003,sig_06,src_000891,op_havoc,rep_16  id_000005,sig_06,src_000995,op_flip1,pos_65535  id_000006,sig_06,src_000995,op_ext_AO,pos_65534  id_000007,sig_06,src_001004,op_flip1,pos_15  id_000008,sig_06,src_001004,op_flip1,pos_15  id_000009,sig_06,src_001004,op_flip1,pos_238  id_000010,sig_06,src_001004,op_flip1,pos_554  id_000011,sig_06,src_001004,op_flip1,pos_1954  id_000012,sig_06,src_001004,op_flip1,pos_1955  id_000013,sig_06,src_001004,op_flip1,pos_1958  id_000014,sig_06,src_001004,op_flip1,pos_1963  id_000015,sig_06,src_001004,op_flip1,pos_6662  id_000016,sig_06,src_001004,op_flip1,pos_15144  id_000017,sig_06,src_001004,op_flip1,pos_15321  id_000018,sig_06,src_001004,op_flip1,pos_16334  id_000019,sig_06,src_001004,op_flip1,pos_17475  id_000020,sig_06,src_001004,op_flip1,pos_18334  id_000021,sig_06,src_001004,op_flip1,pos_20365  id_000022,sig_06,src_001004,op_flip1,pos_20500  id_000023,sig_06,src_001004,op_flip1,pos_20513  id_000024,sig_06,src_001004,op_flip1,pos_20518  id_000025,sig_06,src_001004,op_flip1,pos_20521  id_000026,sig_06,src_001004,op_flip1,pos_20522  id_000027,sig_06,src_001004,op_flip1,pos_20525  id_000028,sig_06,src_001004,op_flip1,pos_20527  id_000029,sig_06,src_001004,op_flip1,pos_20550  id_000030,sig_06,src_001004,op_flip1,pos_25139  id_000031,sig_06,src_001004,op_flip1,pos_25204  id_000032,sig_06,src_001004,op_flip1,pos_32259  id_000033,sig_06,src_001004,op_flip1,pos_44443  id_000034,sig_06,src_001004,op_flip1,pos_50703  id_000035,sig_06,src_001004,op_flip1,pos_57865  id_000036,sig_06,src_001004,op_flip1,pos_63260  id_000037,sig_06,src_001004,op_flip2,pos_40352  id_000038,sig_06,src_001004,op_arith8,pos_15330,val_-31  id_000039,sig_06,src_001004,op_arith8,pos_32239,val_-30  id_000040,sig_06,src_001004,op_int32,pos_10338,val_be_+512  (+5 more)
