[package]
name = "deflate"
version = "0.8.6"
edition = "2018"
license = "MIT/Apache-2.0"
authors = ["oyvindln <oyvindln@users.noreply.github.com>"]
readme = "README.md"
keywords = ["flate", "deflate", "zlib", "compression", "gzip"]
repository = "https://github.com/image-rs/deflate-rs"
homepage = "https://github.com/image-rs/deflate-rs"
documentation = "https://docs.rs/deflate/"
description = """
A DEFLATE, zlib and gzip encoder written in rust.
"""
categories = ["compression"]

exclude = [
  "tests/*",
  "fuzz/*"
]

[dependencies]
adler32 = "1.0.4"
byteorder = "1"
gzip-header = { version = "0.3", optional = true }

[dev-dependencies]
miniz_oxide = "0.3.6"

[features]
benchmarks = []
gzip = ["gzip-header"]

[badges]
travis-ci = { repository = "image-rs/deflate-rs", branch = "dev" }

[package.metadata.docs.rs]
features = ["gzip"]
