[package]
name = "deflate-fuzz-target"
version = "0.1.0"
authors = ["Andrew Champion <andrew.champion@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afl = "0.5"
deflate = { path = "../" }
miniz_oxide = "0.3"
